2003-04-17  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (TESTS): Removed `register' for now.

2003-04-17  Moritz Schulte  <moritz@g10code.com>

	* basic.c (check_digests): Include checks for SHA512 and SHA384.

2003-04-16  Moritz Schulte  <moritz@g10code.com>

	* basic.c (check_one_md): Also test md_copy.

2003-04-07  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (TESTS): Added register.

	* register.c: New file.

2003-03-30  Simon Josefsson  <jas@extundo.com>

	* basic.c (check_one_cipher): New.  Test CTR.
	(main): Call it.
	(check_ciphers): Check CTR mode.

2003-03-26  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (TESTS): Added pubkey.

	* pubkey.c: New file.

2003-03-22  Simon Josefsson  <jas@extundo.com>

	* basic.c (check_cbc_mac_cipher): New.
	(main): Use it.

2003-03-19  Werner Koch  <wk@gnupg.org>

	* keygen.c (check_rsa_keys): Don't expect an exponent when asking
	for e=0.
	(check_generated_rsa_key): Just print exponent if EXPECTED_E is 0.

2003-03-02  Moritz Schulte  <moritz@g10code.com>

	* basic.c (check_one_cipher): Use gcry_cipher_reset() instead of
	gcry_cipher_close(), gcry_cipher_open and gcry_cipher_setkey().

2003-01-23  Werner Koch  <wk@gnupg.org>

	* keygen.c: New. 

2003-01-20  Simon Josefsson  <jas@extundo.com>

	* basic.c (check_digests): Add CRC.
	(check_one_md): Print computed and expected values on error.

2003-01-20  Werner Koch  <wk@gnupg.org>

	* basic.c (check_one_md): Kludge to check a one million "a".
	(check_digests): Add checks for SHA-256.

2003-01-20  Werner Koch  <wk@gnupg.org>

	* basic.c (check_pubkey): Check the keygrip for the sample key.

2003-01-15  Werner Koch  <wk@gnupg.org>

	* basic.c (verify_one_signature,check_pubkey_sign)
	(check_pubkey): New.
	(main): Check public key functions. Add a --debug option.

2002-11-23  Werner Koch  <wk@gnupg.org>

	* basic.c (check_digests): Add another test for MD4.  By Simon
	Josefsson.

2002-11-10  Simon Josefsson  <jas@extundo.com>
